# FSO-Table-Documentation-Worker

./: .gitignore  README.md  package-lock.json
fso-tables-worker/: .gitignore  Cargo.toml  wrangler.toml
fso-tables-worker/src/: db.rs  db_fso.rs  email_fns.rs  lib.rs  server.rs
