[package]
name = "fso-tables-worker"
version = "0.1.0"
edition = "2021"
authors = [ "JohnAFernandez <jafernandez.tampabay@gmail.com>" ]
description = "A cloudflare worker designed to allow the FSO tables to be worked on by any authorized party."
license = "Unlicense"
repository = "https://github.com/JohnAFernandez/FSO-Table-Documentation-Worker"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http', 'axum', 'd1'] }
worker-macros = { version="0.2.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.203"
argon2 = "0.5.3"
email_address = "0.2.5"
regex = "1.10.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = { version = "0.2.15", features = ["js"] }
serde_json = "1.0.122"
chrono = "0.4.38"

